[package]
name = "china_unicom_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
encoding_rs = "0.8.34"
reqwest = { version = "0.12.7", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"

[profile.release]
lto = true
strip = true
opt-level = "z"   # Optimize for size.
codegen-units = 1
panic = "abort"
